--- a/i3/config
+++ b/i3/config
@@ -33,7 +33,7 @@ bindsym $mod+Tab exec rofi -show window -config ~/linux_setups/i3/rofi/config
 bindsym $mod+d exec rofi -show run -config ~/linux_setups/i3/rofi/config
 bindsym $mod+g exec --no-startup-id gimp
 bindsym $mod+c exec --no-startup-id code
-bindsym $mod+n exec --no-startup-id nautilus
+bindsym $mod+t exec --no-startup-id thunar
 
 # Change Focus
 bindsym $mod+Left focus left
@@ -53,10 +53,17 @@ bindsym $mod+h split h
 # Split Orientation Vertical
 bindsym $mod+v split v
 
-# Change Container Layout
-bindsym $mod+s layout stacking
-bindsym $mod+b layout tabbed
-bindsym $mod+t layout toggle split
+# Layout Mode
+bindsym $mod+l mode "Layout"
+mode "Layout" {
+        bindsym s layout stacking
+        bindsym b layout tabbed
+        bindsym t layout toggle split
+
+        bindsym Escape mode "default"
+        bindsym $mod+Space mode "default"
+}
+
 
 # Workspaces
 set $ws1 "1"
@@ -92,8 +99,8 @@ bindsym $mod+Shift+8 move container to workspace number $ws8
 bindsym $mod+Shift+9 move container to workspace number $ws9
 
 # Resize Window
-bindsym $mod+r mode "resize"
-mode "resize" {
+bindsym $mod+r mode "Resize"
+mode "Resize" {
         bindsym Left resize shrink width 10 px
         bindsym Down resize grow height 10 px
         bindsym Up resize shrink height 10 px
